src/renderer/styles/App.scss
@import 'color';
@import 'constant';
@import 'spacing';

body {
  position: relative;
  color: white;
  background: $primary-dark;
  font-family: sans-serif;
  font-size: 1em;
  overflow-y: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0px;

  #root {
    // Spacing and height
    padding: $spacing-m;
    padding-top: $spacing-s;
    height: calc(100vh - $titlebar-height - $spacing-m - $spacing-s);
    width: calc(100vw - 2 * $spacing-m);

    // Add flex so we can split space bweteen parametric and graph views
    display: flex;
    flex-direction: column;
    gap: $spacing-s;
  }
}

.titlebar {
  background-color: $primary-dark;
  height: $titlebar-height;
  width: 100%;
  -webkit-app-region: drag; /* Allow user to drag the window using this titlebar */
  -webkit-user-select: none; /* Prevent user from selecting things */
  user-select: none;

  span {
    height: 100%;
    display: flex;
    margin-left: $spacing-m;
    justify-content: end;
    flex-direction: column;
  }
}

.parameteric-wrapper {
  flex: 1;
  gap: $spacing-s;
}

.graph-wrapper {
  flex: 1;
  border-radius: $spacing-m;
  border: 2px solid $secondary-default;
}

.row {
  display: flex;
  flex-direction: row;
}

.col {
  display: flex;
  flex-direction: column;
}

.full {
  height: 100%;
  width: 100%;
}

.center {
  align-content: center;
  align-items: center;
  justify-content: center;
  text-align: center;
}

/** Scrollbar styles */
::-webkit-scrollbar {
  height: 8px;
}

// Scrollbar track
::-webkit-scrollbar-track {
  border-radius: 8px;
  background: $primary-lighter;
}

// Scrollbar handle
::-webkit-scrollbar-thumb {
  border-radius: 8px;
  background: $primary-light;

  &:hover {
    background: $primary-default;
  }
}

